# eval-control-plane

./: .gitignore  AGENTS.md  README.md
apps/api/: package-lock.json  package.json
apps/web/: package-lock.json  package.json
docs/adr/: 0001-record-architecture-decisions.md  0002-lighteval-integration-via-cli-first-runner.md  0003-artifact-contract-and-storage-layout.md  0004-results-json-is-source-of-truth-normalize-for-querying.md  0005-benchmark-registry-from-lighteval-task-discovery-pack-curation.md  0006-explicit-scoring-modes-deterministic-vs-judge-vs-jury.md  0007-details-parquet-is-read-on-demand-no-sample-rows-in-db.md  0008-worker-pools-split-by-execution-plane-gpu-vs-endpoint.md  0009-evaluation-framework-registry-runner-results-on-lighteval.md  0010-jobspec-api-contract-between-platform-and-runner.md  0011-judge-jury-execution-semantics-and-scoring-config.md  0012-judge-jury-task-plugins-and-pack-mapping.md  0013-database-backend-sqlite-for-local-development.md  0014-web-ux-baseline-and-leadership-demo-layout.md  0015-home-dashboard-and-empty-state-layout.md  0016-visual-theme-dark-slate-leadership-mode.md  0017-vp-demo-seed-data.md  0018-home-activity-panels-recent-runs-and-top-packs.md  0019-run-comparison-view.md  0020-benchmark-detail-tabs.md  0021-conversation-agents-benchmarks-packs-and-metrics.md  0022-conversation-core-v1-pack-from-multi-turn-traces.md  README.md  implementation-tracker.md  (+4 more)
services/runner/: pyproject.toml
services/runner/runner/: conversation_lighteval_plugin.py  conversation_tasks.py  jobspec.py  lighteval_cli.py  main.py
(+23 files in other folders)
